crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__result_type_view.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (I 42)) of
  DataI payload#2 -> 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_3
    (force
      [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (con integer 9))]
        (delay (error))]))
    (con data (I 42))])
--- optimized Core
case@Data (con data (I 42)) of
  DataI payload#1 -> 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam generated_3
      (force
        [[[[[[builtin_4 generated_3] (delay (error))] (delay (error))] (delay (error))]
          (delay (con integer 9))]
          (delay (error))]))
      (con data (I 42))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data (con data (I 42)) of
  DataI payload#2 -> 9
--- isolated folded Core
let payload#2 : int = 42 in
9
--- isolated cleaned Core
9
--- isolated UPLC before
(program 1.1.0
  [(lam generated_3
    (force
      [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (con integer 9))]
        (delay (error))]))
    (con data (I 42))])
--- isolated UPLC after
(program 1.1.0 (con integer 9))
--- result
(con integer 9)
--- logs
[]
