crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__shared_constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#50 : Data = (con data (Constr 122 [I 42])) in
let alias#51 : Data = data#50 in
constr 0 data#50 (case@Data alias#51 of
  DataConstr payload#52 -> payload#52) (case@Data alias#51 of
  DataConstr payload#53 -> payload#53)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_50
    [(lam alias_51
      (constr 0
        data_50
        [(lam generated_54
          (force
            [[[[[[(force (builtin chooseData)) generated_54]
              (delay [(lam payload_52 payload_52) [(builtin unConstrData) generated_54]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_51]
        [(lam generated_55
          (force
            [[[[[[(force (builtin chooseData)) generated_55]
              (delay [(lam payload_53 payload_53) [(builtin unConstrData) generated_55]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_51]))
      data_50])
    (con data (Constr 122 [I 42]))])
--- optimized Core
let data#1 : Data = (con data (Constr 122 [I 42])) in
let anf#5 : pair int (list Data) = case@Data data#1 of
  DataConstr payload#3 -> payload#3 in
let anf#6 : pair int (list Data) = case@Data data#1 of
  DataConstr payload#4 -> payload#4 in
constr 0 data#1 anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam data_2
      [(lam anf_8
        [(lam anf_10 (constr 0 data_2 anf_8 anf_10))
          [(lam generated_11
            (force
              [[[[[[builtin_12 generated_11]
                (delay [(lam payload_9 payload_9) [(builtin unConstrData) generated_11]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_2]])
        [(lam generated_13
          (force
            [[[[[[builtin_12 generated_13]
              (delay [(lam payload_7 payload_7) [(builtin unConstrData) generated_13]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          data_2]])
      (con data (Constr 122 [I 42]))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let data#50 : Data = (con data (Constr 122 [I 42])) in
let alias#51 : Data = data#50 in
let anf#54 : pair int (list Data) = case@Data alias#51 of
  DataConstr payload#52 -> payload#52 in
let anf#55 : pair int (list Data) = case@Data alias#51 of
  DataConstr payload#53 -> payload#53 in
constr 0 data#50 anf#54 anf#55
--- isolated folded Core
let data_payload#56 : pair int (list Data) = (con (pair integer (list data)) (122, [(I 42)])) in
let data#50 : Data = (con data (Constr 122 [I 42])) in
let alias#51 : Data = data#50 in
let anf#54 : pair int (list Data) = let payload#52 : pair int (list Data) = data_payload#56 in
payload#52 in
let anf#55 : pair int (list Data) = let payload#53 : pair int (list Data) = data_payload#56 in
payload#53 in
constr 0 data#50 anf#54 anf#55
--- isolated cleaned Core
let data_payload#56 : pair int (list Data) = (con (pair integer (list data)) (122, [(I 42)])) in
constr 0 (con data (Constr 122 [I 42])) data_payload#56 data_payload#56
--- isolated UPLC before
(program 1.1.0
  [(lam data_50
    [(lam alias_51
      [(lam anf_54
        [(lam anf_55 (constr 0 data_50 anf_54 anf_55))
          [(lam generated_56
            (force
              [[[[[[(force (builtin chooseData)) generated_56]
                (delay [(lam payload_53 payload_53) [(builtin unConstrData) generated_56]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            alias_51]])
        [(lam generated_57
          (force
            [[[[[[(force (builtin chooseData)) generated_57]
              (delay [(lam payload_52 payload_52) [(builtin unConstrData) generated_57]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          alias_51]])
      data_50])
    (con data (Constr 122 [I 42]))])
--- isolated UPLC after
(program 1.1.0
  [(lam data_payload_56
    (constr 0 (con data (Constr 122 [I 42])) data_payload_56 data_payload_56))
    (con (pair integer (list data)) (122, [(I 42)]))])
--- result
(constr 0
  (con data (Constr 122 [I 42]))
  (con (pair integer (list data)) (122, [(I 42)]))
  (con (pair integer (list data)) (122, [(I 42)])))
--- logs
[]
