crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__shared_empty_list.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#15 : Data = (con data (List [])) in
let alias#16 : Data = data#15 in
constr 0 data#15 (case@Data alias#16 of
  DataList payload#17 -> payload#17) (case@Data alias#16 of
  DataList payload#18 -> payload#18)
--- unoptimized UPLC
(program 1.1.0
  [(lam data_15
    [(lam alias_16
      (constr 0
        data_15
        [(lam generated_19
          (force
            [[[[[[(force (builtin chooseData)) generated_19] (delay (error))] (delay (error))]
              (delay [(lam payload_17 payload_17) [(builtin unListData) generated_19]])]
              (delay (error))]
              (delay (error))]))
          alias_16]
        [(lam generated_20
          (force
            [[[[[[(force (builtin chooseData)) generated_20] (delay (error))] (delay (error))]
              (delay [(lam payload_18 payload_18) [(builtin unListData) generated_20]])]
              (delay (error))]
              (delay (error))]))
          alias_16]))
      data_15])
    (con data (List []))])
--- optimized Core
let data#1 : Data = (con data (List [])) in
let anf#5 : list Data = case@Data data#1 of
  DataList payload#3 -> payload#3 in
let anf#6 : list Data = case@Data data#1 of
  DataList payload#4 -> payload#4 in
constr 0 data#1 anf#5 anf#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam data_2
      [(lam anf_8
        [(lam anf_10 (constr 0 data_2 anf_8 anf_10))
          [(lam generated_11
            (force
              [[[[[[builtin_12 generated_11] (delay (error))] (delay (error))]
                (delay [(lam payload_9 payload_9) [(builtin unListData) generated_11]])]
                (delay (error))]
                (delay (error))]))
            data_2]])
        [(lam generated_13
          (force
            [[[[[[builtin_12 generated_13] (delay (error))] (delay (error))]
              (delay [(lam payload_7 payload_7) [(builtin unListData) generated_13]])]
              (delay (error))]
              (delay (error))]))
          data_2]])
      (con data (List []))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let data#15 : Data = (con data (List [])) in
let alias#16 : Data = data#15 in
let anf#19 : list Data = case@Data alias#16 of
  DataList payload#17 -> payload#17 in
let anf#20 : list Data = case@Data alias#16 of
  DataList payload#18 -> payload#18 in
constr 0 data#15 anf#19 anf#20
--- isolated folded Core
let data_payload#21 : list Data = (con (list data) []) in
let data#15 : Data = (con data (List [])) in
let alias#16 : Data = data#15 in
let anf#19 : list Data = let payload#17 : list Data = data_payload#21 in
payload#17 in
let anf#20 : list Data = let payload#18 : list Data = data_payload#21 in
payload#18 in
constr 0 data#15 anf#19 anf#20
--- isolated cleaned Core
let data_payload#21 : list Data = (con (list data) []) in
constr 0 (con data (List [])) data_payload#21 data_payload#21
--- isolated UPLC before
(program 1.1.0
  [(lam data_15
    [(lam alias_16
      [(lam anf_19
        [(lam anf_20 (constr 0 data_15 anf_19 anf_20))
          [(lam generated_21
            (force
              [[[[[[(force (builtin chooseData)) generated_21] (delay (error))] (delay (error))]
                (delay [(lam payload_18 payload_18) [(builtin unListData) generated_21]])]
                (delay (error))]
                (delay (error))]))
            alias_16]])
        [(lam generated_22
          (force
            [[[[[[(force (builtin chooseData)) generated_22] (delay (error))] (delay (error))]
              (delay [(lam payload_17 payload_17) [(builtin unListData) generated_22]])]
              (delay (error))]
              (delay (error))]))
          alias_16]])
      data_15])
    (con data (List []))])
--- isolated UPLC after
(program 1.1.0
  [(lam data_payload_21
    (constr 0 (con data (List [])) data_payload_21 data_payload_21))
    (con (list data) [])])
--- result
(constr 0 (con data (List [])) (con (list data) []) (con (list data) []))
--- logs
[]
